# OpenCV-HellowWorld

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  Makefile  OutPutGrayImage.cpp  OutputBinaryImage.cpp  README.md
