cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
add_executable( OutputGrayImage OutputGrayImage.cpp )
target_link_libraries( OutputGrayImage ${OpenCV_LIBS} )
add_executable( OutputBinaryImage OutputBinaryImage.cpp )
target_link_libraries( OutputBinaryImage ${OpenCV_LIBS} )